--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,9 @@
     "lint": {
       "outputs": []
     },
+    "start": {
+      "dependsOn": ["build"]
+    },
     "dev": {
       "cache": false
     }
