--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,16 +15,17 @@
     "@mui/material": "^5.10.4",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.31.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@types/node": "^17.0.12",
+    "@types/node": "^18.7.16",
     "@types/react": "18.0.17",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
     "next-transpile-modules": "9.0.0",
     "tsconfig": "*",
-    "typescript": "^4.5.3"
+    "typescript": "^4.8.3"
   }
 }
